Replace use of deprecated constructor.
The `URL(String)` constructor is deprecated. The correct way of
constructing a URL is to construct a URI first, and then to get a URL
from it.